# detector

./: .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-ubuntu  LICENSE  README.md  build-detector.sh  license
.github/workflows/: dockerimage-clang-8-alpine.yml  dockerimage-gcc-5-ubuntu.yml  pushdockerimage.yml
cmake/: darma_detectorConfig.cmake.in  detectorConfig.cmake.in
examples/: CMakeLists.txt  example_1.cc  example_2.cc  example_3.cc
scripts/: license-template
src/: detector.h  detector_common.h  detector_headers.h  none_such.h  traits.h  void_t.h
